--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,13 @@
 # Tests
+test.ts
 test.js
 test/
+test-workers/
 *.test.js
+*.test.ts
 *.spec.js
+*.spec.ts
+tsconfig.test.json
 
 # Docs (README is included automatically)
 DOCS.md
@@ -13,6 +18,9 @@ DOCS.md
 .eslintrc*
 .prettierrc*
 tsconfig.json
+biome.json
+bun.lock
+bun.lockb
 
 # IDE
 .vscode/
@@ -25,4 +33,17 @@ coverage/
 # Git
 .git/
 .github/
+
+# Benchmarks (includes Docker files)
+benchmarks/
+
+# Source TypeScript files (dist/ is published, keep .d.ts)
+src/
+*.ts
+!*.d.ts
+
+# Misc
+*.log
+.DS_Store
+Thumbs.db
 
